# thinkora

./: .gitmodules  CMakeLists.txt  README.md  configure  makefile
characters/: A-01.json
language/characters/: caret.json
language/segments/: caret.json
pattern/: en.json  shapes.json
pattern/character/en/: A-01.json  B-01.json  C-01.json  Cc-01.json  D-01.json  E-01.json  F-01.json  G-01.json  H-01.json  I-01.json  J-01.json  K-01.json  L-01.json  M-01.json  N-01.json  O-01.json  Oo-01.json  P-01.json  Pp-01.json  Q-01.json  R-01.json  S-01.json  Ss-01.json  T-01.json  U-01.json  Uu-01.json  V-01.json  Vv-01.json  W-01.json  Ww-01.json  X-01.json  X×-01.json  Y-01.json  Z-01.json  Zz-01.json
pattern/shape/: circle-01.json
src/: CMakeLists.txt  bar.cpp  bar.h  board.cpp  board.h  character.cpp  character.h  circle.cpp  circle.h  convex.cpp  convex.h  dot.cpp  dot.h  drawing.cpp  drawing.h  fit.cpp  fit.h  guess.cpp  guess.h  job.cpp  job.h  line.cpp  line.h  main.cpp  ocr.cpp  ocr.h  pad.cpp  pad.h  pattern.cpp  pattern.h  point.cpp  point.h  polyline.cpp  polyline.h  result.cpp  result.h  shape.cpp  shape.h  sketch.cpp  sketch.h  (+8 more)
